@@ -1,25 +1,26 @@
 package com.sensormanager.iot.controller;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
+
+import com.sensormanager.iot.dto.SensorJSONPackageDTO;
+import com.sensormanager.iot.dto.SensorDataDTO;
+import com.sensormanager.iot.service.SensorDataServiceImp;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 import org.mockito.MockitoAnnotations;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 
-import com.sensormanager.iot.dto.SensorDataDTO;
-import com.sensormanager.iot.service.SensorDataServiceImp;
+import static org.mockito.Mockito.*;
 
 class SensorDataControllerTest {
 
@@ -34,26 +35,50 @@ class SensorDataControllerTest {
         MockitoAnnotations.openMocks(this);
     }
 
-    /*@Test
-    void testGetAllSensorData() {
-        List<SensorDataDTO> mockData = Arrays.asList(new SensorDataDTO(), new SensorDataDTO());
-        when(sensorDataService.getAllSensorData()).thenReturn(mockData);
-        List<Long> sensorIds = new ArrayList();
-        sensorIds.add(Long.getLong("2"));
-        ResponseEntity<List<SensorDataDTO>> response = sensorDataController.getSensorData(sensorIds, Long.getLong("1743642108"), Long.getLong("17436421999"));
-        assertEquals(HttpStatusCode.valueOf(200), response.getStatusCode());
+    @Test
+    void testGetSensorData() {
+        List<Long> sensorIds = List.of(1L, 2L);
+        Long fromEpoch = 1742861430L;
+        Long toEpoch = 1742861495L;
+
+        List<SensorDataDTO> mockData = List.of(
+                SensorDataDTO.builder().id(1L).idSensor(1L).metric("temp").record("24.4").recordCreatedAt(1742861430L).build()
+        );
+
+        when(sensorDataService.getSensorData(sensorIds, fromEpoch, toEpoch)).thenReturn(mockData);
+
+        ResponseEntity<List<SensorDataDTO>> response = sensorDataController.getSensorData(sensorIds, fromEpoch, toEpoch);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(mockData, response.getBody());
-        verify(sensorDataService, times(1)).getAllSensorData();
+        verify(sensorDataService, times(1)).getSensorData(sensorIds, fromEpoch, toEpoch);
     }
 
     @Test
     void testCreateSensorData() {
-        SensorDataDTO inputData = new SensorDataDTO();
-        SensorDataDTO mockData = new SensorDataDTO();
-        when(sensorDataService.createSensorData(inputData)).thenReturn(mockData);
-        ResponseEntity<SensorDataDTO> response = sensorDataController.createSensorData(inputData);
-        assertEquals(HttpStatusCode.valueOf(200), response.getStatusCode());
-        assertEquals(mockData, response.getBody());
-        verify(sensorDataService, times(1)).createSensorData(inputData);
-    }*/
+        SensorJSONPackageDTO input = SensorJSONPackageDTO.builder()
+                .apiKey("82ba1908-96c7-4a7b-854c-969a5e389909")
+                .jsonData(List.of(
+                        Map.of("datetime", "1742861430", "temp", "24.4", "humidity", "0.5"),
+                        Map.of("datetime", "1742861495", "temp", "22.1", "humidity", "0.6")
+                ))
+                .build();
+
+        List<SensorDataDTO> mockResponse = Arrays.asList(
+                SensorDataDTO.builder().id(1L).idSensor(99L).metric("temp").record("24.4").recordCreatedAt(1742861430L).build(),
+                SensorDataDTO.builder().id(2L).idSensor(99L).metric("humidity").record("0.5").recordCreatedAt(1742861430L).build(),
+                SensorDataDTO.builder().id(3L).idSensor(99L).metric("temp").record("22.1").recordCreatedAt(1742861495L).build(),
+                SensorDataDTO.builder().id(4L).idSensor(99L).metric("humidity").record("0.6").recordCreatedAt(1742861495L).build()
+        );
+
+        when(sensorDataService.createSensorData(input)).thenReturn(mockResponse);
+
+        ResponseEntity<List<SensorDataDTO>> response = sensorDataController.createSensorData(input);
+
+        assertEquals(HttpStatusCode.valueOf(201), response.getStatusCode());
+        assertEquals(4, response.getBody().size());
+        verify(sensorDataService, times(1)).createSensorData(input);
+    }
+
 }
+
